--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@ body{
   }
   
   ::-webkit-scrollbar-thumb {
-    background-color: #4299e1;
+    background-color: #8B8A91;
   }
   
   ::-webkit-scrollbar-track {
